--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <div id="wrapper">
     <header class="page">
          <h1>Here's My Site Name</h1>
@@ -39,3 +40,4 @@
         <p>footer content here</p>
     </footer>
 </div>
+</html>
